--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_above="@+id/bt"
             android:layout_marginBottom="-47dp"
             android:scrollbars="vertical"
-            android:textSize="30sp" />
+            android:textSize="18sp" />
 
         <LinearLayout
             android:id="@+id/bt"
@@ -56,7 +56,13 @@
                 android:onClick="stop"
                 android:layout_weight="1"
                 />
-
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="翻页"
+                android:onClick="next"
+                android:layout_weight="1"
+                />
 
         </LinearLayout>
 
